Style and Structure header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/main.css" />
   <script src="https://use.fontawesome.com/19692c8321.js"></script>
+  <script src="https://use.typekit.net/vyp2ksj.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
 	<header>
-		<a href="/" id="logo"><img src="/assets/img/logo.svg"></a>
+		<a href="/" id="logo"><img src="assets/img/logo.svg"/></a>
 		<nav>
 			<a class="button" href="#">Login</a>
 			<a class="button button-highlight"href="#">Ask Now</a>
-		</nav>
+			</nav>
 	</header>
+	<section class="hero">
+		<div class="filter"></filter>
+		<h1>Ask a trainer anything for a dollar.</h1>
+		<a class="button button-highlight">Ask Now<a/>
+	</section>
 
 
 
