Add style and structure to content on homepage

--- a/index.html
+++ b/index.html
@@ -14,17 +14,37 @@
 		<a href="/" id="logo"><img src="assets/img/logo.svg"/></a>
 		<nav>
 			<a class="button" href="#">Login</a>
-			<a class="button button-highlight"href="#">Ask Now</a>
+			<a class="button button-highlight button-big"href="#">Ask Now</a>
 			</nav>
 	</header>
 	<section class="hero">
 		<div class="filter"></filter>
 		<h1>Ask a trainer anything for a dollar.</h1>
-		<a class="button button-highlight">Ask Now<a/>
+		<a class="button button-highlight">Ask Now</a>
 	</section>
 
+	<section class="content">
+		<div class="wrapper">
+			<h2>Featured Trainer</h2>
+			<div class="featured-trainer">
+				<img src="assets/img/mike.jpg">
+				<h3>Mike Walsh</h3>
+				<p class="title">Expert Personal Trainer</p>
+			<div>
+			<p>A Marine Corps Veteran and graduate from Corban University. I have been training  people from all walks of life for over 10 years. I have a wonderful wife and wonderful son. I am wholeheartedly a family man.</p>
 
-
+			<p>When I’m not spending time with family or helping people achive their fitness goals, I read books,write articles, and record for Modern Era Fitness. </p>
+		</div>
+		<h4>Ask Mike any question you may have regarding your wellness journey!</h4>
+		<a class="button button-highlight button-big">Ask Now</a>
+	</section>
+	<footer>
+		<nav>
+			<a href="#">about</a>
+			<a href="#">faq</a>
+			<a href="#">ladder</a>
+		</nav>
+	</footer>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="assets/js/site.js" type="text/javascript"></script>
 </body>
