Updated logo, fixed button styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="/" id="logo"><img src="assets/img/logo.svg"/></a>
 		<nav>
 			<a class="button" href="#">Login</a>
-			<a class="button button-highlight button-big"href="#">Ask Now</a>
+			<a class="button button-highlight"href="#">Ask Now</a>
 			</nav>
 	</header>
 	<section class="hero">
