--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 		<a href="/" id="logo"><img src="assets/img/logo.svg"/></a>
 		<nav>
 			<a class="button" href="#">Login</a>
-			<a class="button button-highlight"href="#">Ask Now</a>
+			<a href="#ask" rel="modal:open" class="button button-highlight">Ask Now</a>
 			</nav>
 	</header>
 	<section class="hero">
 		<div class="filter"></filter>
 		<h1>Ask a trainer anything for a dollar.</h1>
-		<a class="button button-highlight">Ask Now</a>
+		<a href="#ask" rel="modal:open" class="button button-highlight">Ask Now</a>
 	</section>
-
 	<section class="content">
 		<div class="wrapper">
 			<h2>Featured Trainer</h2>
@@ -36,7 +35,7 @@
 			<p>When I’m not spending time with family or helping people achive their fitness goals, I read books,write articles, and record for Modern Era Fitness. </p>
 		</div>
 		<h4>Ask Mike any question you may have regarding your wellness journey!</h4>
-		<a class="button button-highlight button-big">Ask Now</a>
+		<a href="#ask" rel="modal:open"  class="button button-highlight button-big">Ask Now</a>
 	</section>
 	<footer>
 		<nav>
@@ -45,7 +44,27 @@
 			<a href="#">ladder</a>
 		</nav>
 	</footer>
+
+  <div id="ask" style="display:none;">
+  	<div class="modal-title">
+  		<img class="trainer-image" src="assets/img/mike.jpg">
+  		<h3>ASK MIKE A QUESTION NOW!</h3>
+		</div>
+    <div class="modal-content">
+			
+			<form>
+				
+				<textarea placeholder="Ask your question here..."></textarea>
+				<a href="#" class="button button-highlight">Submit</a>
+			</form>    	
+
+    </div>
+  </div>
+
+
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="assets/js/jquery.modal.min.js"></script>
 <script src="assets/js/site.js" type="text/javascript"></script>
 </body>
 </html>
