--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<form>
 				
 				<textarea placeholder="Ask your question here..."></textarea>
-				<a href="#" class="button button-highlight">Submit</a>
+				<a href="#" class="button button-highlight">Submit & pay $1</a>
 			</form>    	
 
     </div>
