--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<header>
 		<a href="/" id="logo"><img src="assets/img/logo.svg"/></a>
 		<nav>
-			<a class="button" href="#">Login</a>
-			<a href="#ask" rel="modal:open" class="button button-highlight">Ask Now</a>
+			<a class="button" href="/login">Login</a>
+			<a href="/signup" class="button button-highlight">Ask Now</a>
 			</nav>
 	</header>
 	<section class="hero">
