--- a/login/index.html
+++ b/login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>FITASSIST: Signup</title>
+  <title>FITASSIST: Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../assets/css/main.css" />
@@ -13,15 +13,15 @@
 	<header id="signup-page">
 		<a href="/" id="logo"><img src="../assets/img/logo.svg"/></a>
 		<nav>
-			<a class="button" href="/login">Login</a>
+			<a class="button button-highlight" href="/signup">Signup</a>
 			</nav>
 	</header>
-	<section class="signup-body signup-bg">
+	<section class="signup-body login-bg">
 		
 	
 		<div class="signup-card">
 			
-			<h2>Sign up and ask a trainer anything for $1</h2>
+			<h2>Login and ask a trainer anything for $1</h2>
 
 
 
@@ -29,37 +29,22 @@
 
 				<a class="facebook-button">
 					<i class="fa fa-facebook-official"></i>
-					<p>Signup with Facebook</p>
+					<p>Login with Facebook</p>
 				</a>
 	
 				<pre>- or -</pre>
-
-				<div class="field half-input">
-					<label for="first_name" class="srt">First Name</label>
-					<input type="text" id="first_name" placeholder="First Name"/>
-				</div>
-				<div class="field half-input">
-					<label for="last_name" class="srt">Last Name</label>
-					<input type="text" id="last_name" placeholder="Last Name"/>
-				</div>
 
 				<div class="field">
 					<label for="email" class="srt">E-mail Address</label>
 					<input type="text" id="email" placeholder="E-mail Address"/>
 				</div>
 
-				<div class="field half-input">
+				<div class="field">
 					<label for="password" class="srt">Password</label>
 					<input type="text" id="password" placeholder="Password"/>
 				</div>
 
-
-				<div class="field half-input">
-					<label for="password_conformation" class="srt">Password Conformation</label>
-					<input type="text" id="password_conformation" placeholder="Password Conformation"/>
-				</div>
-				
-				<input type="submit" class="button button-big" value="Signup"></input>
+				<input type="submit" class="button button-big" value="Login"></input>
 				<a class="forgot-password">Forgot your password?</a>
 			</form>
 
