--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -86,7 +86,7 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="assets/js/jquery.modal.min.js"></script>
-<script src="assets/js/site.js" type="text/javascript"></script>
+<script src="../assets/js/jquery.modal.min.js"></script>
+<script src="../assets/js/site.js" type="text/javascript"></script>
 </body>
 </html>
