--- a/login/index.html
+++ b/login/index.html
@@ -44,7 +44,7 @@
 					<input type="text" id="password" placeholder="Password"/>
 				</div>
 
-				<input type="submit" class="button button-big" value="Login"></input>
+				<input type="submit" class="button button-big dashboard-redirect" value="Login" data-target="/dashboard"></input>
 				<a class="forgot-password">Forgot your password?</a>
 			</form>
 
@@ -58,7 +58,7 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="assets/js/jquery.modal.min.js"></script>
-<script src="assets/js/site.js" type="text/javascript"></script>
+<script src="../assets/js/jquery.modal.min.js"></script>
+<script src="../assets/js/site.js" type="text/javascript"></script>
 </body>
 </html>
