--- a/signup/index.html
+++ b/signup/index.html
@@ -53,13 +53,38 @@
 					<input type="text" id="password" placeholder="Password"/>
 				</div>
 
-
 				<div class="field half-input">
 					<label for="password_conformation" class="srt">Password Conformation</label>
 					<input type="text" id="password_conformation" placeholder="Password Conformation"/>
 				</div>
 				
-				<input type="submit" class="button button-big" value="Signup"></input>
+	
+				<h3>Billing information</h3>
+
+				<div class="field">
+					<label for="cc-number" class="srt">Card Number</label>
+					<input type="text" id="cc-number" placeholder="Card Number"/>
+				</div>
+
+				<div class="field third-input">
+					<label for="expiration" class="srt">Expiration (MM/YY)</label>
+					<input type="text" id="expiration" placeholder="Expiration (MM/YY)"/>
+				</div>
+
+				<div class="field third-input">
+					<label for="cvc" class="srt">CVC</label>
+					<input type="text" id="cvc" placeholder="CVC"/>
+				</div>
+
+				<div class="field third-input">
+					<label for="zip" class="srt">Zip Code</label>
+					<input type="text" id="zip" placeholder="Zip Code"/>
+				</div>
+
+				<h3>YOUR QUESTION</h3>
+				<textarea placeholder="Type your question here..."></textarea>
+
+				<input type="submit" class="button button-big dashboard-redirect" value="Signup and pay $1" data-target="/dashboard"></input>
 				<a class="forgot-password">Forgot your password?</a>
 			</form>
 
@@ -73,7 +98,7 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="assets/js/jquery.modal.min.js"></script>
-<script src="assets/js/site.js" type="text/javascript"></script>
+<script src="../assets/js/jquery.modal.min.js"></script>
+<script src="../assets/js/site.js" type="text/javascript"></script>
 </body>
 </html>
